<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/teal_700"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/header_text"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrease_button"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:text="@string/decrease_button_text"
                android:textColor="@color/teal_200"
                android:textSize="24sp" />

            <Button
                android:id="@+id/increase_button"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:text="@string/increase_button_text"
                android:textColor="@color/teal_200"
                android:textSize="24sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="150sp" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/result_text"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="150sp" />

        <Button
            android:id="@+id/roll_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/purple_700"
            android:text="@string/roll_button_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/count_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/purple_700"
            android:text="@string/count_button_text"
            android:textSize="24sp" />

    </LinearLayout>
</LinearLayout>
